2003-08-28  Martin Baulig  <martin@ximian.com>

	* generic.cs (ConstructedType.ResolveAsTypeStep): Actually bind
	the parameters to the generic type.

2003-08-28  Martin Baulig  <martin@ximian.com>

	* cs-tokenizer.cs (parse_less_than): Also allow all builtin types.

2003-08-28  Martin Baulig  <martin@ximian.com>

	* cs-parser.jay (opt_type_argument_list): Use
	`OP_GENERICS_LT type_arguments OP_GENERICS_GT'.
	(primary_expression): Replace `qualified_identifier' with `type_name'.
	(type_parameter_list): Use `OP_GENERICS_LT type_parameters OP_GENERICS_GT'.

	* cs-tokenizer.cs (is_punct): When reading a `<', invoke a custom
	parser to check whether it is syntactically a type parameter list;
	return OP_GENERICS_LT/OP_GENERICS_GT instead of OP_LT/OP_GT in
	this case.

2003-08-26  Martin Baulig  <martin@ximian.com>

	* ecore.cs (SimpleName.SimpleNameResolve): Look for members before
	resolving aliases; fixes #47927.

2003-08-26  Martin Baulig  <martin@ximian.com>

	* statement.cs (Using.DoResolve): This is internally emitting a
	try/finally clause, so we need to set ec.NeedExplicitReturn if we
	do not always return.  Fixes #47681.

2003-08-26  Martin Baulig  <martin@ximian.com>

	* decl.cs (MemberCore): Moved WarningNotHiding(),
	Error_CannotChangeAccessModifiers() and CheckMethodAgainstBase()
	into MemberBase.
	(AdditionResult): Make this nested in DeclSpace.
	(DeclSpace.ctor): The .ctor now takes an additional NamespaceEntry
	argument; call NamespaceEntry.Define() unless we're nested in a
	class or struct.

	* namespace.cs (Namespace.DefineName): New public function.  This
	is called from DeclSpace's .ctor to add 
	(Namespace.Lookup): Include DeclSpaces in the lookup.

	* class.cs (Operator): Derive from MemberBase, not MemberCore.

	* const.cs (Const): Derive from MemberBase, not MemberCore.	

2003-08-25  Martin Baulig  <martin@ximian.com>

	* convert.cs (Convert.ExplicitReferenceConversion): When
	converting from an interface type to a class, unbox if the target